--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
  :root {
-            --green-dark: #0A4108;
-            --green-light: #5A9469;
+            --green-dark: #0A4D68;
+            --green-light: #5DA9E9;
             --beige: #F2E8CF;
-            --red-dark: #DA4108;
+            --red-dark: #D96C2B;
         }
 
         * {
