--- a/styles.css
+++ b/styles.css
@@ -110,15 +110,8 @@
             padding: 20px;
             margin-top: 40px;
         }
- <style>
-    body {
-      font-family: 'Times New Roman', serif;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      background-color: #0A4D68;
-      color: #F2E8CF;
-    }
+
+/* style for baptism html */
 
     .gallery {
       width: 90%;
